--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -109,6 +109,7 @@
   }
   .FooterStyleContactUs p {
     margin-left: 2.88rem;
+    margin-right: 2.88rem
   }
   .FooterStyleMore {
     width: 100%;
